--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,33 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.2",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "8.17.5",
+    "@types/three": "^0.180.0",
+    "antd": "^5.27.4",
+    "axios": "^1.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1",
+    "react-three-fiber": "^6.0.13",
+    "sass-loader": "^16.0.5",
+    "scss": "^0.2.4",
+    "three": "^0.180.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/node": "^24.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.0.3",
@@ -22,6 +39,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "sass-embedded": "^1.93.1",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7"
   }
 }
