--- a/server/package.json
+++ b/server/package.json
@@ -20,62 +20,60 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@fastify/static": "^8.2.0",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/microservices": "^11.1.6",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/platform-fastify": "^11.1.6",
-    "@nestjs/swagger": "^11.2.0",
-    "@nestjs/typeorm": "^11.0.0",
-    "axios": "^1.12.2",
+    "@nestjs/bull": "10.1.1",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "3.2.3",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/microservices": "10.4.5",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "10.4.5",
+    "@nestjs/typeorm": "10.0.2",
+    "axios": "1.7.7",
     "bcrypt": "^6.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "dotenv": "^17.2.2",
-    "fastify": "^5.6.1",
-    "helmet": "^8.1.0",
-    "joi": "^18.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "passport-jwt": "^4.0.1",
-    "pg": "^8.16.3",
-    "qiniu": "^7.14.0",
-    "redis": "^5.8.2",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.27",
-    "uuid": "^13.0.0"
+    "bull": "4.16.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "dotenv": "16.4.5",
+    "fastify": "4.28.1",
+    "ioredis": "5.4.1",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "pg": "8.12.0",
+    "qiniu": "7.11.0",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.1",
+    "typeorm": "0.3.20",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
-    "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "@types/joi": "^17.2.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.5.2",
-    "@types/supertest": "^6.0.3",
-    "@types/uuid": "^11.0.0",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^16.0.0",
-    "jest": "^30.0.0",
-    "prettier": "^3.4.2",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/bull": "4.10.0",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^20.3.1",
+    "@types/passport-jwt": "4.0.1",
+    "@types/supertest": "^6.0.0",
+    "@types/uuid": "9.0.8",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
