--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/multipart": "^7.0.0",
+    "@fastify/static": "6.12.0",
     "@nestjs/bull": "10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "3.2.3",
@@ -29,6 +31,7 @@
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "10.4.5",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "10.0.2",
     "axios": "1.7.7",
     "bcrypt": "^6.0.0",
@@ -44,6 +47,7 @@
     "qiniu": "7.11.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "0.3.20",
     "uuid": "9.0.1"
   },
@@ -66,6 +70,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "pino-pretty": "^13.1.1",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
