--- a/client/.env.development
+++ b/client/.env.development
@@ -1,4 +1,4 @@
-# 开发环境 - 接口基础地址（需替换为你的后端实际地址）
+# 开发环境 - 接口基础地址
 VITE_API_BASE_URL=http://localhost:3000
-# 接口超时时间（单位：毫秒）
+# 接口超时时间
 VITE_API_TIMEOUT=10000
